--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,34 @@
 body {
-    background-color: coral;
+    background: #171A21;
+    text-align: center;
+    color: #DAD6D6;
+}
+h2 {
+    font-size: 50px;
+    letter-spacing: 3px;
+    margin: 40px auto;
+}
+
+button {
+    color: #DAD6D6;
+    font-size: 25px;
+    border-radius: 5px;
+    letter-spacing: 3px;
+    padding: 16px 40px 16px;
+    cursor: pointer;
+}
+
+#start {
+    background: #48633B;
+    border:solid black;
+}
+
+#stop {
+    background: #721329;
+    border:solid black;
+}
+
+#reset {
+    background: #564E58;
+    border:solid black;
 }
